# MOGESTpy

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  test_import.py  teste.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-publish.yml
Applications/: 0d.xlsx  BuildUp.xlsx  Cargas-NovoBmax.xlsx  Cargas.xlsx  Cargas_mg-L.xlsx  Jurumirim.xlsx  Qjurumirim.xlsx  Qobs.xlsx  Vazao_mm.xlsx  calib.ipynb  case.xlsx  case_study.ipynb  case_study_article.ipynb  esc_direto.xlsx  estacoes_plu.csv  etp.xlsx  flow_stations.xlsx  mass_balance_test.ipynb  qtotal.xlsx  quality.ipynb  quality_article.ipynb  streeter-phelps.ipynb  vazoes_simuladas.xlsx
Applications/data/flow/: flow_stations.xlsx
Applications/data/parameters/: BuildUp.xlsx  Jurumirim2.xlsx  case.xlsx  case_calib2.xlsx  case_calib3.xlsx  esc_direto.xlsx
Applications/data/rainfall/: prec.xlsx  smap_jundiai_chuva.xlsx
Applications/data/water_quality/: Cargas.xlsx  Cargas_mg-L.xlsx  cpontuais.xlsx  qual.xlsx
Applications/examples/: CalibrarSmap.ipynb  SMAP_example.ipynb  chuvas.ipynb  iterable_support_example.py  sihqual_example.py  sihqual_improved_example.py
Applications/examples/_old/: Calibration.py
Applications/gis/: area.shp  stations_points.dbf
Applications/notebooks/examples/: SMAP_example.ipynb  ZeroD_example.ipynb
Applications/notebooks/tutorials/: chuva.ipynb  chuva_article.ipynb  mass_balance_test.ipynb  musk.ipynb  teste.ipynb
Applications/shapefiles/: area.dbf  area.qmd  area.shx  stations_points.shp  stations_points.shx
Datasets/: Atibaia.csv  Biritiba_SMAP.xlsx  Result.xlsx  smap-at.xlsx
Datasets/SIHQUALInputs/: boundary_y.csv
Presentations/Introduction/: IntroductionMOGESTpy.aux  IntroductionMOGESTpy.nav  IntroductionMOGESTpy.out  IntroductionMOGESTpy.tex  IntroductionMOGESTpy.toc
Quality/: BuWo.py  README.md  ZeroD.py  __init__.py
Quality/examples/: ZeroD_example.ipynb
Quality/tests/: test_BuWo.py
Quantity/: README.md  __init__.py
Quantity/Application/: Calibration.py
Quantity/Applications/: Calibration.py  Downstream.py  Otimizacoes.py  SMAP.py  Upstream.py
Quantity/Hydrodynamic/: README.md  SIHQUAL.py  SaintVenant.py
Quantity/Hydrodynamic/SIHQUALInputs/: boundary_c.csv  lateral_c.csv
Quantity/Hydrological/: MassBalance.py  Muskingum.py  README.md  SMAP.py
Quantity/examples/: SMAP_example.ipynb
docs/: .readthedocs.yaml  api.rst  conf.py  index.rst  installation.rst  quality.rst  quantity.rst  readthedocs.yaml  references.bib  requirements.txt  routing.rst  smap.rst
examples/: iterable_support_example.py  sihqual_example.py  sihqual_improved_example.py
mogestpy/: __init__.py  quality.py
mogestpy/quality/: buwo.py  zero_d.py
mogestpy/quantity/Hydrodynamic/: SIHQUAL.py  SaintVenant.py  saint_venant.py
mogestpy/quantity/Hydrological/: MassBalance.py  Muskingum.py  SMAP.py  SMAP2.py  SMAPm.py  mass_balance.py  muskingum.py  py-pde.py
tests/: __init__.py  run_sihqual_tests.py  test_hydrodynamic_integration.py  test_muskingum.py  test_saint_venant.py  test_sihqual.py  test_sihqual_excel.py  test_sihqual_integration.py  test_smap.py  test_smap_daily.py  test_smap_monthly.py  test_smap_new.py  test_zero_dimensional.py
(+4 files in other folders)
