[tool.poetry]
name = "MOGESTpy"
version = "2.0.0"
description = "Water resources management model based on hydrological and hydronimic models"
authors = ["Dario Hachisu Hossoda <dario.hossoda@usp.br>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dariohhossoda/MOGESTpy"
repository = "https://github.com/dariohhossoda/MOGESTpy"
keywords = ["hydrology", "water resouces", "hydrological model"]
exclude = [
    { path = "Applications"},
    { path = "Datasets"},
    { path = "tests"}
]
include = [
    { path = "docs", format = "sdist" }
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dariohhossoda/MOGESTpy/issues"

[tool.poetry.dependencies]
python = "^3.9"
spotpy = "^1.6.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
tqdm = "^4.67.3"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"
black = "^24.10.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^5.0.0"
openpyxl = "^3.1.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[project]
name = "mogestpy"
